tests/sumo/output/vtypeprobe/errors/id_empty/errors.sumo
Error: Attribute 'id' in definition of a vTypeProbe is empty.
Quitting (on error).
